2009-12-18 00:15  paddockd

	* [r112] ChangeLog, src/squeezeslave/squeezeslave.c: Updated
	  ChangeLog
	  Increased version to 112.

2009-12-18 00:13  paddockd

	* [r111] ChangeLog, makefile.mingw32-asio, makefile.mingw32-padev,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,
	  src/slimproto/slimproto.c, src/slimproto/slimproto.h,
	  src/squeezeslave/squeezeslave.c: Increased slimaudio_http.c
	  timeout from 15 to 45 seconds.
	  Increased slimproto.c timeout from 15 to 30 seconds.
	  Rolled back libportaudio to 20091022 for makefile.mingw32-asio
	  and makefile.mingw32-asio
	  Increased version to 111.

2009-12-15 14:07  paddockd

	* [r110] config/sccmd, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added config/sccmd bash script.
	  sccmd can be mapped to multimedia keys to control for example;
	  volume, play/pause, skip, etc. Script comments contain an example
	  key mapping for fvwm.
	  Updated audio_output PLAYING state to only handle STMu or STMd
	  instead of the both.
	  Restored original clearing of any remaining buffer when a decoder
	  error occurs so we don't hear it played out.
	  Increased version to 110.

2009-12-13 20:21  paddockd

	* [r109] ChangeLog: Updated ChangeLog.

2009-12-13 14:40  paddockd

	* [r108] src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_output.c, src/slimproto/slimproto.c,
	  src/squeezeslave/squeezeslave.c: Removed verbose debugging from
	  slimproto.c.
	  Removed unused variables from slimaudio.
	  Refactored slimaudio_output pa_callback decoder buffer underflow
	  handling.
	  Increased version to 108.

2009-12-13 14:05  paddockd

	* [r107] makefile.linux24-alsa, makefile.linux24-alsa-display,
	  makefile.linux26-alsa, makefile.linux26-alsa-display,
	  makefile.linux26-i64-alsa, makefile.linux26-i64-alsa-display,
	  makefile.linux26-ppc-alsa, makefile.linux26-ppc-alsa-display,
	  patches/badstate-pa_linux_alsa.patch,
	  src/slimaudio/slimaudio_output.c,