@@ -44,7 +44,7 @@ bool output_change = false;
 static volatile bool signal_exit_flag = false;
 static volatile bool signal_restart_flag = false;
 const char* version = "0.9";
-const int revision = 113;
+const int revision = 114;
 static int player_type = 8;
 
 #ifdef SLIMPROTO_DEBUG
